--- a/src/styles.less
+++ b/src/styles.less
@@ -1,13 +1,8 @@
 @import "./app/constants.less";
 
 @font-face {
-    font-family: cheddar-jack;
-    src: url('./assets/fonts/cheddarjack.ttf');
-}
-
-@font-face {
-    font-family: kgthisisnotgoodbye;
-    src: url('./assets/fonts/KGThisIsNotGoodbye.ttf');
+    font-family: adequate;
+    src: url('./assets/fonts/Adequate-ExtraLight.ttf');
 }
 
 body {
@@ -37,5 +32,5 @@ body {
 }
 
 .cj {
-    font-family: cheddar-jack;
+    font-family: adequate;
 }
